<resources>
    <string name="app_name">Pokemon List</string>
    <string name="default_notification_channel_id" translatable="false">com.yunusbedir.pokem</string>
    <string name="give_me_overlay_permission">Give me overlay permission!</string>
    <string name="retry">Try Again</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="pokemon_name">Pokemon Name:</string>
    <string name="pokemon_height">Pokemon Height:</string>
    <string name="pokemon_weight">Pokemon Weight:</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="close_application">Close Application</string>
    <string name="permission">Permission</string>
    <string name="pokemon_detail">Pokemon Detail</string>
    <string name="pokemon_list">Pokemon List</string>
    <string name="close_window">Close Window</string>
    <string name="show_in_overlay">Show in Overlay</string>
</resources>