<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_graph"
    app:startDestination="@id/pokemonListFragment">

    <fragment
        android:id="@+id/permissionFragment"
        android:name="com.yunusbedir.pokem.ui.permission.PermissionFragment"
        android:label="@string/permission"
        tools:layout="@layout/fragment_permission" />
    <fragment
        android:id="@+id/pokemonDetailFragment"
        android:name="com.yunusbedir.pokem.ui.pokemondetail.PokemonDetailFragment"
        android:label="@string/pokemon_detail"
        tools:layout="@layout/fragment_pokemon_detail">
        <argument
            android:name="pokemonId"
            app:argType="integer" />
    </fragment>
    <fragment
        android:id="@+id/pokemonListFragment"
        android:name="com.yunusbedir.pokem.ui.pokemonlist.PokemonListFragment"
        android:label="@string/pokemon_list"
        tools:layout="@layout/fragment_pokemon_list">
        <action
            android:id="@+id/action_pokemonListFragment_to_pokemonDetailFragment"
            app:destination="@id/pokemonDetailFragment" />
    </fragment>
    <action
        android:id="@+id/action_global_permissionFragment"
        app:destination="@id/permissionFragment"
        app:popUpTo="@id/pokemonListFragment" />
</navigation>