<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pokemondetail.PokemonDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/container"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/front_icon_image_view"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/pokemon_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_name"
            app:layout_constraintEnd_toStartOf="@id/pokemon_name_text_view"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/front_icon_image_view" />

        <TextView
            android:id="@+id/pokemon_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/pokemon_name_label"
            app:layout_constraintTop_toBottomOf="@id/front_icon_image_view" />

        <TextView
            android:id="@+id/pokemon_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_height"
            app:layout_constraintEnd_toStartOf="@id/pokemon_height_text_view"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/pokemon_name_text_view" />

        <TextView
            android:id="@+id/pokemon_height_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/pokemon_height_label"
            app:layout_constraintTop_toBottomOf="@id/pokemon_name_text_view" />

        <TextView
            android:id="@+id/pokemon_weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_weight"
            app:layout_constraintEnd_toStartOf="@id/pokemon_weight_text_view"
            app:layout_constraintStart_toStartOf="@id/guideline2"
            app:layout_constraintTop_toBottomOf="@id/pokemon_height_text_view" />

        <TextView
            android:id="@+id/pokemon_weight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/pokemon_weight_label"
            app:layout_constraintTop_toBottomOf="@id/pokemon_height_text_view" />

        <Button
            android:id="@+id/show_in_overlay_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show in Overlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pokemon_weight_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/loading_state_include"
        layout="@layout/item_view_loading_state"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent" />
</FrameLayout>